--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,6 +542,7 @@ main {
 
 .service-icon-box { margin-bottom: 10px; }
 
+.service-icon-box i { margin: auto; }
 .service-icon-box img { margin: auto; }
 
 .service-content-box { text-align: center; }
@@ -553,6 +554,10 @@ main {
   font-size: var(--fs-6);
   font-weight: var(--fw-3);
   line-height: 1.6;
+}
+
+.skill-item {
+  margin: 30px;
 }
 
 
@@ -956,7 +961,7 @@ main {
 .project-img {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 100%;
   border-radius: 16px;
   overflow: hidden;
   margin-bottom: 15px;
@@ -974,7 +979,7 @@ main {
   transition: var(--transition-1);
 }
 
-.project-item > a:hover .project-img::before { background: hsla(0, 0%, 0%, 0.5); }
+/* .project-item > a:hover .project-img::before { background: hsla(0, 0%, 0%, 0.5); } */
 
 .project-item-icon-box {
   --scale: 0.8;
